Fix related box on mobile

--- a/app/assets/stylesheets/core.scss
+++ b/app/assets/stylesheets/core.scss
@@ -150,13 +150,6 @@ h4 {
   }
 }
 
-/* the sidebar related box overlaps the main content when zoomed on iPhone */
-@media only screen and (max-device-width:320px) {
-  .related-positioning {
-    position: absolute !important;
-  }
-}
-
 .related-container {
   position: relative;
   height: 0;
@@ -275,10 +268,10 @@ h4 {
     left: -9999em;
 
     @include media(mobile) {
-      position: relative;
-      left: 0;
-      top: -2.2em;
-      float: right;
+      position: static;
+      border-top: 1px solid #C9D0D0;
+      margin: 0.25em 0 0;
+      padding: 0.75em 0;
     }
   }
 }
